added some css styling

--- a/mainPage.html
+++ b/mainPage.html
@@ -12,13 +12,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-      <h3 id="title">The Main Page</h3>
+      <h1 id="title">The Main Page</h1>
       <button id="donateButton" onclick="goToDonatePage()">Donate</button>
-      <!-- <script>
-        function myFunction() {
-          document.getElementById("donateButton").style.color = "red";
-        }
-        </script> -->
+    
         <script>
         function goToDonatePage()
             {
@@ -29,6 +25,12 @@
         alt="Picture about care" id="image" height=30% width=30%>
         <figcaption id="image-caption">This is what we care about</figcaption>
     </figure>
+
+    <p>
+        <h>Short summary about our page</h>
+        <h3>More about the cause that we are passionate about</h3>
+    </p>
+
       
     </body>
 </html>
