--- a/mainPage.html
+++ b/mainPage.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="">
 </head>
 
-<body>
+<body id="body">
     <div class="body-inner">
         <h1 id="website-name">The Website Name</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
