--- a/donatePage.html
+++ b/donatePage.html
@@ -8,20 +8,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>ablahblahblah</title>
+    <title>donate-page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
         <div class="container">
-          <a class="navbar-brand" href="#">GiveWell</a>
+          <a class="navbar-brand" href="mainPage.html">TTP Red Cross</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" aria-current="page" href="mainPage.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ABOUT</a>
